--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,15 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+/* Task 3 */
+.gallery {
+  list-style: none;
+
+  padding: 0;
+
+  display: flex;
+
+  gap: 20px;
+  
+}
